# QDMI-on-IQM

./: .dockerignore  .license-tools-config.json  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md  noxfile.py  pyproject.toml
.github/workflows/: CD.yml  CI.yml  cpp-coverage.yml  cpp-install-tests.yml  cpp-linter.yml  cpp-tests-macos.yml  cpp-tests-ubuntu.yml  cpp-tests-windows.yml  documentation.yml  python-examples.yml  python-packaging-cibuildwheel.yml  python-packaging-sdist.yml  spank-tests.yml
cmake/: ExternalDependencies.cmake
docs/: conf.py  contributing.md  dependencies.md  examples.md  index.md  python_package.md  qiskit.md  spack_guide.md  spank_plugin.md  usage.md
examples/: mqt_bench.py  qsci_h2.py
include/: curl_http_client.hpp  curl_http_client_internal.hpp  http_client.hpp  iqm_auth.hpp
python/iqm/qdmi/: __init__.py  _paths.py  estimator.py  qiskit.py  sampler.py
spank/: .license-tools-config.json  CMakeLists.txt  Dockerfile  LICENSE.md  README.md  iqm-qdmi.conf.in  iqm_spank_plugin.cpp  noxfile.py
spank/config/: cgroup.conf  slurm.conf
spank/test/: bell_state.py  entrypoint.sh  run_docker_tests.sh  test_env_injection.sh  test_hook_logs.sh  test_resonance_workflow.sh
src/: iqm_device.cpp
src/internal/: CMakeLists.txt  curl_http_client.cpp  iqm_auth.cpp
test/integration/: test_iqm_device_integration.cpp
test/python/: test_estimator.py  test_qiskit_backend.py  test_sampler.py
test/unit/: CMakeLists.txt  curl_http_client_test_support.cpp  curl_http_client_test_support.hpp  test_curl_http_client.cpp  test_iqm_auth.cpp  test_iqm_device.cpp
